--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Blog
 
 {% for post in site.posts limit:7 %}
   <small>{{ post.date | date_to_string }}</small>
-  <h2><a href="{{ post.url }}" {% if post.description %} title="{{ post.description }}" {% endif %}>{{ post.title }}</a></h2>
+  <h2 class="recent"><a href="{{ post.url }}" {% if post.description %} title="{{ post.description }}" {% endif %}>{{ post.title }}</a></h2>
 {% endfor %}
 
 <footer>
