--- a/about.html
+++ b/about.html
@@ -12,3 +12,7 @@ title: About
 <p>This is the hub of my personal time machine, and DR3WH0 is its license plate.</p>
 
 <p><small>July 30, 2013</small></p>
+
+<hr/>
+<p>Theme License (<a href="http://orderedlist.com/" title="Attribution Link">orderedlist</a>): <a href="http://creativecommons.org/licenses/by-sa/3.0/" title="Creative Commons Attribution-ShareAlike 3.0 Unported">CC BY-SA 3.0</a></p>
+<p>Source License: <a href="http://opensource.org/licenses/MIT" title="MIT License">MIT</a></p>
