--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@ title: Blog
 {% endfor %}
 
 <footer>
-  <h4><a href="/about.html" title="Time Machine License Plate">ABOUT</a>  |  <a href="/archive.html" title="Thought Archive">MORE THOUGHTS &gt;&gt;&gt;</a></h4>
+  <h4><a href="/about.html" title="Time Machine License Plate">ABOUT</a>  <blink>|</blink>  <a href="/archive.html" title="Thought Archive">MORE THOUGHTS &gt;&gt;&gt;</a></h4>
 </footer>
