--- a/about.html
+++ b/about.html
@@ -14,4 +14,4 @@ title: About
 <p><small>July 30, 2013</small></p>
 
 <hr/>
-<p><small>Theme License (via <a href="http://orderedlist.com/" title="Attribution Link">orderedlist</a>): <a href="http://creativecommons.org/licenses/by-sa/3.0/" title="Creative Commons Attribution-ShareAlike 3.0 Unported">CC BY-SA 3.0</a> | Source License: <a href="http://opensource.org/licenses/MIT" title="MIT License">MIT</a></small></p>
+<p><small><ul><li>Theme License (via <a href="http://orderedlist.com/" title="Attribution Link">orderedlist</a>): <a href="http://creativecommons.org/licenses/by-sa/3.0/" title="Creative Commons Attribution-ShareAlike 3.0 Unported">CC BY-SA 3.0</a></li><li>Source License: <a href="http://opensource.org/licenses/MIT" title="MIT License">MIT</a></li></ul></small></p>
