--- a/about.html
+++ b/about.html
@@ -14,4 +14,7 @@ title: About
 <p><small>July 30, 2013</small></p>
 
 <hr/>
-<p><small><ul><li>Theme License (via <a href="https://github.com/orderedlist/minimal/" title="Attribution Link">orderedlist</a>): <a href="http://creativecommons.org/licenses/by-sa/3.0/" title="Creative Commons Attribution-ShareAlike 3.0 Unported">CC BY-SA 3.0</a></li><li>Source License: <a href="http://opensource.org/licenses/MIT" title="MIT License">MIT</a></li></ul></small></p>
+<p><b>Licenses:</b></p>
+<p><small><ul><li>Theme (via <a href="https://github.com/orderedlist/minimal/" title="Theme Attribution">orderedlist</a>): <a href="http://creativecommons.org/licenses/by-sa/3.0/" title="Creative Commons Attribution-ShareAlike 3.0 Unported">CC BY-SA 3.0</a></li>
+              <li>Source (via <a href="https://github.com/plusjade/jekyll-bootstrap" title="Source Attribution">plusjade</a>): <a href="http://opensource.org/licenses/MIT" title="MIT License">MIT</a></li>
+              <li>Content (<a href="http://dr3wh0.github.io" title="Content Attribution">DR3WH0</a>): <a href="http://creativecommons.org/licenses/by/3.0/deed.en_US" title="Creative Commons Attribution 3.0 Unported">CC BY 3.0</a></li></ul></small></p>
