--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ title: About
 
 <p>This is the hub of my personal time machine, and DR3WH0 is its license plate.</p>
 
-<p><small>July 30, 2013</small></p>
+<p style="text-align:right"><small>July 30, 2013</small></p>
 
 <hr/>
 <p><b>Licenses:</b></p>
