add guest book link

--- a/about.html
+++ b/about.html
@@ -12,6 +12,9 @@ title: About
 <p>This is the hub of my personal time machine, and DR3WH0 is its license plate.</p>
 
 <p style="text-align:right"><small>July 30, 2013</small></p>
+<hr/>
+
+<a href="\guestbook.html"><h4><b>SIGN THE GUEST BOOK >>></b></h4></a>
 
 <hr/>
 <p><small><ul><li>Theme (via <a href="https://github.com/orderedlist/minimal/" title="Theme Attribution">orderedlist</a>): <a href="http://creativecommons.org/licenses/by-sa/3.0/" title="Creative Commons Attribution-ShareAlike 3.0 Unported">CC BY-SA 3.0</a></li>
