--- a/about.html
+++ b/about.html
@@ -9,11 +9,11 @@ title: About
 
 <p>The internet is a funny place. It's more about throughput than persistence. That's why the <a href="">Internet Archive</a> has a <a href="http://archive.org/web/web.php">Wayback Machine</a>: to show us where we've been, lest we forget where we're going.</p>
 
-<p>This is the hub of my personal time machine, and DR3WH0 is its license plate.</p>
+<p>This is the hub of my personal time machine, and <b>DR3WH0</b> is its license plate.</p>
 
 <p style="text-align:right"><small>July 30, 2013</small></p>
 
-<a href="/guestbook.html"><h5><b>SIGN THE GUEST BOOK >>></b></h5></a>
+<h5><a href="/guestbook.html"><b>SIGN THE GUEST BOOK >>></b></a></h5>
 
 <hr/>
 <p><small><ul><li>Theme (via <a href="https://github.com/orderedlist/minimal/" title="Theme Attribution">orderedlist</a>): <a href="http://creativecommons.org/licenses/by-sa/3.0/" title="Creative Commons Attribution-ShareAlike 3.0 Unported">CC BY-SA 3.0</a></li>
