--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ title: About
 
 <p>This is the hub of my personal time machine, and <b>DR3WH0</b> is its license plate.</p>
 
-<p style="text-align:right"><small>July 30, 2013</small></p>
+<p style="text-align:right"><small>A.W.<br>July 30, 2013</small></p>
 
 <h5><a href="/guestbook.html"><b>SIGN THE GUEST BOOK >>></b></a></h5>
 
