--- a/404.html
+++ b/404.html
@@ -31,7 +31,8 @@
         <h2>Please Check Your Flux Capacitor</h2>
         <hr/>
         
-        <h3>Time Traveller, the page you are looking for does not exist at this point in the space time continuum.<br />You will be redirected to the <a href="/archive.html">Archive</a> in a moment.</h3>
+        <h3>Time Traveller, the page you are looking for does not exist at this point in the space time continuum.</h3>
+        <h3>You will be redirected to the <a href="/archive.html">Thought Archive</a> in a moment.</h3>
 
       </section>
       <footer>
