--- a/404.html
+++ b/404.html
@@ -31,14 +31,13 @@
 
       </section>
       <footer>
+        <p>A <a href="https://github.com/DR3WH0/DR3WH0.github.io" title="Source Code on GitHub" target="tab">site</a> by <a href="http://andrewweidnerportfolio.weebly.com" title="Professional Portfolio" target="tab">A. Weidner</a><br />
+        <small><a href="http://statcounter.com/p9114352/?guest=1">Stats for DR3WH0.NET</a></small><br />
         <script src="/javascripts/statcounter.js"></script>
         <noscript><div class="statcounter">
           <a title="website statistics" href="http://statcounter.com/" class="statcounter">
-          <img class="statcounter" src="http://c.statcounter.com/9114352/0/f55f8078/0/" alt="website statistics" /></a></div></noscript>
-          <p><small><a href="http://statcounter.com/p9114352/visitor_map">Stats for DR3WH0.NET</a></small></p>
-      
-        <p>A <a href="https://github.com/DR3WH0/DR3WH0.github.io" title="Source Code on GitHub" target="tab">site</a> by <a href="http://andrewweidnerportfolio.weebly.com" title="Professional Portfolio" target="tab">Andrew Weidner</a><br />
-        <small>Hosted on <a href="http://pages.github.com">GitHub</a> &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+          <img class="statcounter" src="http://c.statcounter.com/9114352/0/f55f8078/0/" alt="website statistics" /></a>
+        </div></noscript></p>
       </footer>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
