--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@ title: About
 
 <p style="text-align:right"><small>A.W.<br>July 30, 2013</small></p>
 
+<p><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0_LicensePlate.jpg" alt="DR3WH0_LicensePlate.jpg" height="283" width="550" /></p>
+
 <h5><a href="/guestbook.html"><b>SIGN THE GUEST BOOK >>></b></a></h5>
 
 <hr/>
