--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ title: About
 
 <p>This is the hub of my personal time machine, and <b>DR3WH0</b> is its license plate.</p>
 
-<p><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0_LicensePlate.jpg" alt="DR3WH0_LicensePlate.jpg" height="283" width="550" /></p>
+<p><a href="http://about.me/DR3WH0" title="about.me"><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0_LicensePlate.jpg" alt="DR3WH0_LicensePlate.jpg" height="283" width="550" /></a></p>
 
 <h5><a href="/guestbook.html"><b>SIGN THE GUEST BOOK >>></b></a></h5>
 
