--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@ title: Blog
 <hr/>
 
 {% for post in site.posts limit:7 %}
-  <small>{{ post.date | date_to_string }}</small>
-  <h2 class="recent"><a href="{{ post.url }}" {% if post.description %} title="{{ post.description }}" {% endif %}>{{ post.title }}</a></h2>
+  {% unless post.category == 'radio' %}
+    <small>{{ post.date | date_to_string }}</small>
+    <h2 class="recent"><a href="{{ post.url }}" {% if post.description %} title="{{ post.description }}" {% endif %}>{{ post.title }}</a></h2>
+  {% endunless %}
 {% endfor %}
 
 <footer>
