--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 ---
 layout: default
-title: Blog
+title: Home
 ---
 
 <h2>Recent Thoughts</h2>
 <hr/>
 
-{% for post in site.posts limit:7 %}
+{% for post in site.posts limit:11 %}
   <small>{{ post.date | date_to_string }}</small>
   <h2 class="recent"><a href="{{ post.url }}" {% if post.description %} title="{{ post.description }}" {% endif %}>{{ post.title }}</a></h2>
 {% endfor %}
 
+<!--
 <footer>
   <h4><a href="/about.html" title="Time Machine License Plate">ABOUT</a>  <blink>|</blink>  <a href="/archive.html" title="Thought Archive">MORE THOUGHTS &gt;&gt;&gt;</a></h4>
 </footer>
+-->
