--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@ title: Home
 <h2>Recent Thoughts</h2>
 <hr/>
 
-{% for post in site.posts limit:11 %}
-  <small>{{ post.date | date_to_string }}</small>
-  <h2 class="recent"><a href="{{ post.url }}" {% if post.description %} title="{{ post.description }}" {% endif %}>{{ post.title }}</a></h2>
+{% for post in site.posts %}
+  {% unless post.category == 'radio' %}
+    {% capture post_count %} {{ post_count | plus: 1 }} {% endcapture %}
+    {% if post_count < 8 %}
+      <small>{{ post.date | date_to_string }}</small>
+      <h2 class="recent"><a href="{{ post.url }}" {% if post.description %} title="{{ post.description }}" {% endif %}>{{ post.title }}</a></h2>
+    {% endif %}
+  {% endunless %}
 {% endfor %}
 
 <!--
