--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@ title: Home
 
 {% assign counter = '.' %}
 {% for post in site.posts %}
-  {% if page.category != 'radio' and counter.size <= 8 %}
-    {% capture counter %} {{ counter | append:'.' }} {% endcapture %}
-    <small>{{ post.date | date_to_string }}</small>
-    <h2 class="recent"><a href="{{ post.url }}" {% if post.description %} title="{{ post.description }}" {% endif %}>{{ post.title }}</a></h2>
+  {% if post.category != 'radio' %}
+    {% if counter.size <= 8 %}
+      <small>{{ post.date | date_to_string }}</small>
+      <h2 class="recent"><a href="{{ post.url }}" {% if post.description %} title="{{ post.description }}" {% endif %}>{{ post.title }}</a></h2>
+      {% capture counter %} {{ counter | append:'.' }} {% endcapture %}
+    {% endif %}
   {% endif %}
 {% endfor %}
 
