--- a/index.html
+++ b/index.html
@@ -6,15 +6,9 @@ title: Home
 <h2>Recent Thoughts</h2>
 <hr/>
 
-{% assign counter = '.' %}
-{% for post in site.posts %}
-  {% if post.category != 'radio' %}
-    {% if counter.size <= 8 %}
-      <small>{{ post.date | date_to_string }}</small>
-      <h2 class="recent"><a href="{{ post.url }}" {% if post.description %} title="{{ post.description }}" {% endif %}>{{ post.title }}</a></h2>
-      {% capture counter %} {{ counter | append:'.' }} {% endcapture %}
-    {% endif %}
-  {% endif %}
+{% for post in site.posts limit:11 %}
+  <small>{{ post.date | date_to_string }}</small>
+  <h2 class="recent"><a href="{{ post.url }}" {% if post.description %} title="{{ post.description }}" {% endif %}>{{ post.title }}</a></h2>
 {% endfor %}
 
 <!--
