--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <h2>Recent Thoughts</h2>
 <hr/>
 
-{% for post in site.categories.radio.posts do %}
+{% for post in site.radio.posts %}
   <small>{{ post.date | date_to_string }}</small>
   <h2 class="recent"><a href="{{ post.url }}" {% if post.description %} title="{{ post.description }}" {% endif %}>{{ post.title }}</a></h2>
 {% endfor %}
