--- a/archive.html
+++ b/archive.html
@@ -9,4 +9,5 @@ title : Thoughts
 {% include JB/setup %}
 
 {% assign posts_collate = site.posts %}
+{% assign source_page = 'archive' %}
 {% include JB/posts_collate %}
