--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@ layout: default
 title: Home
 ---
 
-<h2>Recent Thoughts</h2>
+<h2>Recent Posts</h2>
 <hr/>
 
-{% for post in site.posts limit:8 %}
+{% for post in site.posts limit:11 %}
   <small>{{ post.date | date_to_string }}</small>
   <h2 class="recent"><a href="{{ post.url }}" {% if post.description %} title="{{ post.description }}" {% endif %}>{{ post.title }}</a></h2>
 {% endfor %}
