--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@ title: Home
 <h2>Recent Posts</h2>
 <hr/>
 
-{% for post in site.posts limit:7 %}
-  <small>{{ post.date | date_to_string }}</small>
-  <h2 class="recent"><a href="{{ post.url }}" {% if post.description %} title="{{ post.description }}" {% endif %}>{{ post.title }}</a></h2>
+{% for post in site.posts limit:11 %}
+  {% unless post.category == "catalog" %}
+    <small>{{ post.date | date_to_string }}</small>
+    <h2 class="recent"><a href="{{ post.url }}" {% if post.description %} title="{{ post.description }}" {% endif %}>{{ post.title }}</a></h2>
+  {% endunless %}
 {% endfor %}
 
