--- a/categories.html
+++ b/categories.html
@@ -15,10 +15,12 @@ title: Categories
 <hr/>
 
 
-{% for category in site.categories %} 
-  <h3 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h3>
-  <ul>
-    {% assign pages_list = category[1] %}  
-    {% include JB/pages_list %}
+{% for category in site.categories %}
+  {% unless category == "catalog" %}
+    <h3 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h3>
+    <ul>
+      {% assign pages_list = category[1] %}  
+      {% include JB/pages_list %}
   </ul>
+  {% endunless %}
 {% endfor %}
