--- a/categories.html
+++ b/categories.html
@@ -16,7 +16,7 @@ title: Categories
 
 
 {% for category in site.categories %}
-  {% unless category == "catalog" %}
+  {% unless category[0] == "catalog" %}
     <h3 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h3>
     <ul>
       {% assign pages_list = category[1] %}  
