--- a/categories.html
+++ b/categories.html
@@ -17,10 +17,12 @@ title: Categories
 
 {% for category in site.categories %}
   {% unless category[0] == "catalog" %}
+  {% unless category[0] == "radio" %}
     <h3 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h3>
     <ul>
       {% assign pages_list = category[1] %}  
       {% include JB/pages_list %}
     </ul>
+  {% endunless %}
   {% endunless %}
 {% endfor %}
