--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 
-<h2>Recent Posts</h2>
+<h2>Recent Transmissions</h2>
 <hr/>
 
 {% for post in site.posts limit:11 %}
