--- a/about.html
+++ b/about.html
@@ -12,14 +12,14 @@ title: About
 
 <p>This is the hub of my personal time machine, and <b>DR3WH0</b> is its license plate.</p>
 
-<p><a property="account" href="http://about.me/DR3WH0" title="about.me"><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0_LicensePlate.jpg" alt="DR3WH0_LicensePlate.jpg" height="283" width="550" /></a></p>
+<p><a property="account" href="http://about.me/DR3WH0" title="about.me" target="tab"><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0_LicensePlate.jpg" alt="DR3WH0_LicensePlate.jpg" height="283" width="550" /></a></p>
 
-<a property="account" class="twitter-timeline" href="https://twitter.com/DR3WH0" data-widget-id="402100651074674688">Tweets by @DR3WH0</a>
+<a property="account" class="twitter-timeline" href="https://twitter.com/DR3WH0" data-widget-id="402100651074674688" target="tab">Tweets by @DR3WH0</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
-<hr/>
-<p><small><ul><li>Theme (via <a property="http://creativecommons.org/ns#license" href="https://github.com/orderedlist/minimal/" title="Theme Attribution">orderedlist</a>): <a href="http://creativecommons.org/licenses/by-sa/3.0/" title="Creative Commons Attribution-ShareAlike 3.0 Unported">CC BY-SA 3.0</a></li>
-              <li>JB Source (via <a href="https://github.com/plusjade/jekyll-bootstrap" title="JB Source Attribution">plusjade</a>): <a href="http://opensource.org/licenses/MIT" title="MIT License">MIT</a></li>
-              <li>SCM Source (via <a href="https://github.com/cshum/SCM-Music-Player" title="SCM Source Attribution">cshum</a>): <a href="http://www.gnu.org/licenses/" title="GNU License">GNU</a></li>
-              <li>Content (<a property="http://creativecommons.org/ns#license" href="http://dr3wh0.net" title="Content Attribution">DR3WH0</a>): <a href="http://creativecommons.org/licenses/by/3.0/deed.en_US" title="Creative Commons Attribution 3.0 Unported">CC BY 3.0</a></li></ul></small></p>
 </div>
+<hr/>
+<p><small><ul><li>Theme (via <a href="https://github.com/orderedlist/minimal/" title="Theme Attribution" target="tab">orderedlist</a>): <a property="http://creativecommons.org/ns#license" href="http://creativecommons.org/licenses/by-sa/3.0/" title="Creative Commons Attribution-ShareAlike 3.0 Unported" target="tab">CC BY-SA 3.0</a></li>
+              <li>JB Source (via <a href="https://github.com/plusjade/jekyll-bootstrap" title="JB Source Attribution" target="tab">plusjade</a>): <a href="http://opensource.org/licenses/MIT" title="MIT License" target="tab">MIT</a></li>
+              <li>SCM Source (via <a href="https://github.com/cshum/SCM-Music-Player" title="SCM Source Attribution" target="tab">cshum</a>): <a href="http://www.gnu.org/licenses/" title="GNU License" target="tab">GNU</a></li>
+              <li>Content (<a href="/index.html" title="Content Attribution">DR3WH0</a>): <a property="http://creativecommons.org/ns#license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US" title="Creative Commons Attribution 3.0 Unported" target="tab">CC BY 3.0</a></li></ul></small></p>
