--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ title: About
 <hr/>
 
 <div vocab="http://xmlns.com/foaf/0.1/" typeof="Person" resource="http://dr3wh0.net#me">
-<p>The internet is a funny place. It's more about throughput than persistence. That's why the <a href="">Internet Archive</a> has a <a href="http://archive.org/web/web.php">Wayback Machine</a>: to show us where we've been, lest we forget where we're going.</p>
+<p>The internet is a funny place. It's more about throughput than persistence. That's why the Internet Archive has a <a href="http://archive.org/web/web.php">Wayback Machine</a>: to show us where we've been, lest we forget where we're going.</p>
 
 <p>This is the hub of my personal time machine, and <b>DR3WH0</b> is its license plate.</p>
 
