remove twitter widget tab target

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ title: About
 
 <p><a property="account" href="http://about.me/DR3WH0" title="about.me" target="tab"><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0_LicensePlate.jpg" alt="DR3WH0_LicensePlate.jpg" height="283" width="550" /></a></p>
 
-<a class="twitter-timeline" href="https://twitter.com/DR3WH0" data-widget-id="402100651074674688" target="tab">Tweets by @DR3WH0</a>
+<a class="twitter-timeline" href="https://twitter.com/DR3WH0" data-widget-id="402100651074674688">Tweets by @DR3WH0</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 </span>
