--- a/about.html
+++ b/about.html
@@ -10,14 +10,14 @@ title: About
 <span vocab="http://xmlns.com/foaf/0.1/" typeof="Person" resource="http://dr3wh0.net#me">
 <p>The internet is a funny place. It's more about throughput than persistence. That's why the Internet Archive has a <a href="http://archive.org/web/web.php">Wayback Machine</a>: to show us where we've been, lest we forget where we're going.</p>
 
-<p>This is the hub of my personal time machine, and <b>DR3WH0</b> is its license plate.</p>
+<p>This is the hub of my personal time machine, and <span property="name"><b>DR3WH0</b></span> is its license plate.</p>
 
 <p><a property="account" href="http://about.me/DR3WH0" title="about.me" target="tab"><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0_LicensePlate.jpg" alt="DR3WH0_LicensePlate.jpg" height="283" width="550" /></a></p>
+</span>
 
 <a class="twitter-timeline" href="https://twitter.com/DR3WH0" data-widget-id="402100651074674688">Tweets by @DR3WH0</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
-</span>
 <hr/>
 <p><small><ul><li>Theme (via <a href="https://github.com/orderedlist/minimal/" title="Theme Attribution" target="tab">orderedlist</a>): <a property="http://creativecommons.org/ns#license" href="http://creativecommons.org/licenses/by-sa/3.0/" title="Creative Commons Attribution-ShareAlike 3.0 Unported" target="tab">CC BY-SA 3.0</a></li>
               <li>JB Source (via <a href="https://github.com/plusjade/jekyll-bootstrap" title="JB Source Attribution" target="tab">plusjade</a>): <a href="http://opensource.org/licenses/MIT" title="MIT License" target="tab">MIT</a></li>
