--- a/about.html
+++ b/about.html
@@ -2,6 +2,9 @@
 published: true
 layout: default
 title: About
+sitemap:
+    priority: 0.5
+    changefreq: monthly
 ---
 
 <h2>Every Time Machine Needs a License Plate</h2>
