--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title: About
 <h2>Every Time Machine Needs a License Plate</h2>
 <hr/>
 
-<span vocab="http://xmlns.com/foaf/0.1/" typeof="Person" resource="http://dr3wh0.net#me">
+<span vocab="http://xmlns.com/foaf/0.1/" typeof="Person" resource="{{ site.url }}{{ page.url }}#author">
 <p>The internet is a funny place. It's more about throughput than persistence. That's why the Internet Archive has a <a href="http://archive.org/web/web.php">Wayback Machine</a>: to show us where we've been, lest we forget where we're going.</p>
 
 <p>This is the hub of my personal time machine, and <span property="name"><b>DR3WH0</b></span> is its license plate.</p>
@@ -22,4 +22,4 @@ title: About
 <p><small><ul><li>Theme (via <a href="https://github.com/orderedlist/minimal/" title="Theme Attribution" target="tab">orderedlist</a>): <a property="http://creativecommons.org/ns#license" href="http://creativecommons.org/licenses/by-sa/3.0/" title="Creative Commons Attribution-ShareAlike 3.0 Unported" target="tab">CC BY-SA 3.0</a></li>
               <li>JB Source (via <a href="https://github.com/plusjade/jekyll-bootstrap" title="JB Source Attribution" target="tab">plusjade</a>): <a href="http://opensource.org/licenses/MIT" title="MIT License" target="tab">MIT</a></li>
               <li>SCM Source (via <a href="https://github.com/cshum/SCM-Music-Player" title="SCM Source Attribution" target="tab">cshum</a>): <a href="http://www.gnu.org/licenses/" title="GNU License" target="tab">GNU</a></li>
-              <li>Content (<a href="/index.html" title="Content Attribution">DR3WH0</a>): <a property="http://creativecommons.org/ns#license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US" title="Creative Commons Attribution 3.0 Unported" target="tab">CC BY 3.0</a></li></ul></small></p>
+              <li>Content (<a href="/index.html" title="Content Attribution">DR3WH0</a>): <a property="http://creativecommons.org/ns#license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US" title="Creative Commons Attribution 3.0 Unported" target="tab" resource="{{ site.url }}{{ page.url }}#author">CC BY 3.0</a></li></ul></small></p>
