remove theme license @property

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ title: About
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 <hr/>
-<p><small><ul><li>Theme (via <a href="https://github.com/orderedlist/minimal/" title="Theme Attribution" target="tab">orderedlist</a>): <a property="http://creativecommons.org/ns#license" href="http://creativecommons.org/licenses/by-sa/3.0/" title="Creative Commons Attribution-ShareAlike 3.0 Unported" target="tab">CC BY-SA 3.0</a></li>
+<p><small><ul><li>Theme (via <a href="https://github.com/orderedlist/minimal/" title="Theme Attribution" target="tab">orderedlist</a>): <a href="http://creativecommons.org/licenses/by-sa/3.0/" title="Creative Commons Attribution-ShareAlike 3.0 Unported" target="tab">CC BY-SA 3.0</a></li>
               <li>JB Source (via <a href="https://github.com/plusjade/jekyll-bootstrap" title="JB Source Attribution" target="tab">plusjade</a>): <a href="http://opensource.org/licenses/MIT" title="MIT License" target="tab">MIT</a></li>
               <li>SCM Source (via <a href="https://github.com/cshum/SCM-Music-Player" title="SCM Source Attribution" target="tab">cshum</a>): <a href="http://www.gnu.org/licenses/" title="GNU License" target="tab">GNU</a></li>
               <li>Content (<a href="/index.html" title="Content Attribution">DR3WH0</a>): <a property="http://creativecommons.org/ns#license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US" title="Creative Commons Attribution 3.0 Unported" target="tab" resource="{{ site.url }}{{ page.url }}#author">CC BY 3.0</a></li></ul></small></p>
