remove big, replace with strong
apparently big was deprecated with html5

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Home
 {% for post in site.posts limit:11 %}
   {% unless post.category == 'catalog' %}
     <small>{{ post.date | date_to_string }}</small>
-    <h3 class="recent"><big><em><a href="{{ post.url }}" {% if post.description %}title="{{ post.description }}"{% elsif post.category == 'radio' %}title="Track list with album covers for a last.fm station played by DR3WH0."{% elsif post.category == 'photo' %}title="A photograph by DR3WH0."{% else %}title="A blog post by DR3WH0."{% endif %}>{{ post.title }}</a></em></big></h3>
+    <h3 class="recent"><strong><a href="{{ post.url }}" {% if post.description %}title="{{ post.description }}"{% elsif post.category == 'radio' %}title="Track list with album covers for a last.fm station played by DR3WH0."{% elsif post.category == 'photo' %}title="A photograph by DR3WH0."{% else %}title="A blog post by DR3WH0."{% endif %}>{{ post.title }}</a></strong></h3>
   {% endunless %}
 {% endfor %}
 
