--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <h2>Recent Transmissions</h2>
 <hr/>
 
-{% for post in site.posts limit:11 %}
+{% for post in paginator.posts %}
   {% unless post.category == 'catalog' %}
     <small>{{ post.date | date_to_string }}</small>
     <h3 class="recent"><strong><a href="{{ post.url }}" {% if post.description %}title="{{ post.description }}"{% elsif post.category == 'radio' %}title="Track list with album covers for a last.fm station played by DR3WH0."{% elsif post.category == 'photo' %}title="A photograph by DR3WH0."{% else %}title="A blog post by DR3WH0."{% endif %}>{{ post.title }}</a></strong></h3>
