--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@ title: Home
 
 <hr/>
 {% if paginator.previous_page %}
-  <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
+  <a href="{{ paginator.previous_page_path }}">Previous </a>
 {% else %}
-  <span class="previous">Previous</span>
+  <span>Previous </span>
 {% endif %}
-<span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+<span>( {{ paginator.page }} of {{ paginator.total_pages }} )</span>
 {% if paginator.next_page %}
-  <a href="{{ paginator.next_page_path }}" class="next">Next</a>
+  <a href="{{ paginator.next_page_path }}"> Next</a>
 {% else %}
-  <span class="next ">Next</span>
+  <span> Next</span>
 {% endif %}
