--- a/404.html
+++ b/404.html
@@ -30,14 +30,14 @@
         <h4>You will be redirected to the <a href="/archive.html">Thought Archive</a> in a moment.</h4>
 
       </section>
-      <footer>
-        <p>A <a href="https://github.com/DR3WH0/DR3WH0.github.io" title="Source Code on GitHub" target="tab">site</a> by <a href="http://andrewweidnerportfolio.weebly.com" title="Professional Portfolio" target="tab">A. Weidner</a><br />
-        <small><a href="http://statcounter.com/p9114352/?guest=1">Stats for DR3WH0.NET</a></small><br />
+      <footer vocab="http://xmlns.com/foaf/0.1/" typeof="Person" resource="{{ site.url }}{{ page.url }}#author">
+        <p><small><a href="/about.html" title="About This Site">ABOUT</a> | <a property="account" href="https://github.com/DR3WH0/DR3WH0.github.io" title="Source Code on GitHub" target="tab">SOURCE</a></small><br />
+        <small><a property="account" href="http://statcounter.com/p9114352/?guest=1" title="StatCounter Statistics">DR3WH0 Statistics</a></small><br />
         <script src="/javascripts/statcounter.js"></script>
         <noscript><div class="statcounter">
           <a title="website statistics" href="http://statcounter.com/" class="statcounter">
           <img class="statcounter" src="http://c.statcounter.com/9114352/0/f55f8078/0/" alt="website statistics" /></a>
-        </div></noscript></p>
+        </div></noscript>&nbsp;<small><a href="/feed.xml">RSS Feed</a></small></p>
       </footer>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
