--- a/archive.html
+++ b/archive.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title : Thoughts
+title : Archive
 ---
 
-<h2>Thoughts</h2>
+<h2>Archive</h2>
 <hr/>
 
 {% include JB/setup %}
