update about page

--- a/about.html
+++ b/about.html
@@ -4,15 +4,19 @@ layout: default
 title: About
 ---
 
-<h2>Every Time Machine Needs a License Plate</h2>
+<h2>Studies in Time and Space</h2>
 <hr/>
 
 <span vocab="http://xmlns.com/foaf/0.1/" typeof="Person" resource="{{ site.url }}{{ page.url }}#author">
 <p>The internet is a funny place. It's more about throughput than persistence. That's why the Internet Archive has a <a href="http://archive.org/web/web.php">Wayback Machine</a>: to show us where we've been, lest we forget where we're going.</p>
 
-<p>This is the hub of my personal time machine, and <span property="name"><b>DR3WH0</b></span> is its license plate.</p>
-
-<p><a property="account" href="http://about.me/DR3WH0" title="about.me" target="tab"><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0_LicensePlate.jpg" alt="DR3WH0_LicensePlate.jpg" height="283" width="550" /></a></p>
+<p>These are some of the places I've been:
+<ul>
+  <li><a href="http://dr3wh0.tumblr.com/">Tumblr</a></li>
+  <li><a href="https://www.last.fm/user/DR3WH0">Last.fm</a></li>
+  <li><a href="http://about.me/DR3WH0">About.me</a></li>
+</ul>
+</p>
 
 <a class="twitter-timeline" href="https://twitter.com/DR3WH0" data-widget-id="402100651074674688">Tweets by @DR3WH0</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
